libmbim-glib,test: setup proxy helper tests

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ src/libmbim-glib/test/test-message
 src/libmbim-glib/test/test-fragment
 src/libmbim-glib/test/test-message-parser
 src/libmbim-glib/test/test-message-builder
+src/libmbim-glib/test/test-proxy-helpers
 src/libmbim-glib/test/*.log
 src/libmbim-glib/test/*.trs
 
